fixed dropdown overlapping issue on update schedule page

--- a/src/app/components/core/scheduler/update-schedule/update-schedule.component.css
+++ b/src/app/components/core/scheduler/update-schedule/update-schedule.component.css
@@ -11,3 +11,9 @@
 .modal {
   position: absolute;
 }
+
+@media screen and (min-width: 769px) {
+  .modal-card {
+    height: 75%;
+  }
+}
